force-app/main/default/objects/Laundry_Service__c/Laundry_Service__c.object-meta.xml
<CustomObject>
    <label>Laundry Service</label>
    <nameField>
        <displayFormat>LS-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Laundry Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>