force-app/main/default/objects/Laundry_Service__c/fields/Control_Type__c.field-meta.xml
<CustomField>
    <fullName>Control_Type__c</fullName>
    <label>Control Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handheld</fullName>
            </value>
            <value>
                <fullName>Relay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>