force-app/main/default/objects/Laundry_Service__c/fields/Has_Header__c.field-meta.xml
<CustomField>
    <fullName>Has_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Header</label>
    <type>Checkbox</type>
</CustomField>