force-app/main/default/objects/Laundry_Service__c/fields/Laundry_Comment__c.field-meta.xml
<CustomField>
    <fullName>Laundry_Comment__c</fullName>
    <label>Laundry Comment</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>