force-app/main/default/objects/Laundry_Service__c/fields/Laundry_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Laundry_Inspection__c</fullName>
    <formula>IF(Has_Header__c, IMAGE(&quot;/resource/1565384310000/LaundryService&quot;, &quot;no header&quot; , 50, 600), &apos;&apos;)</formula>
    <label>Laundry Inspection</label>
    <type>Text</type>
</CustomField>