force-app/main/default/objects/Laundry_Service__c/fields/Linen_pH__c.field-meta.xml
<CustomField>
    <fullName>Linen_pH__c</fullName>
    <label>Linen pH</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>