force-app/main/default/objects/Laundry_Service__c/fields/Survey_Location__c.field-meta.xml
<CustomField>
    <fullName>Survey_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Location</label>
    <referenceTo>Survey_Location__c</referenceTo>
    <relationshipLabel>Laundry Services</relationshipLabel>
    <relationshipName>Laundry_Services</relationshipName>
    <type>Lookup</type>
</CustomField>