force-app/main/default/objects/Laundry_Service__c/fields/Water_Hardness__c.field-meta.xml
<CustomField>
    <fullName>Water_Hardness__c</fullName>
    <label>Water Hardness</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>